Rimosso Clash.java, fix generali